# metalzone

./: .gitignore  .kb-project  CMakeLists.txt  README.md
.claude/: settings.json
.claude/hooks/: log-change.sh
.github/workflows/: build-macos.yml  build-windows.yml  deploy-pages.yml
src/: ConcentricKnob.h  PedalLookAndFeel.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
tests/: chain.test.js  dsp.test.js  package.json  stability.test.js
web/: CNAME  app.js  dsp.js  index.html  package.json  style.css  worklet.js
